@@ -1,0 +1,4 @@
+# set path to RXTXcomm.jar
+rxtxJar=/usr/share/java/RXTXcomm.jar
+# set directory where librxtxSerial.so is located in
+rxtxSoDir=/usr/lib
