@@ -3,6 +3,9 @@ Changelog for JErgometer
 
 //== 0.7.4 ==
 
+2010-01-16
+* [stefan]  * implemented feature #171: create linux source package
+
 2010-01-15
 * [stefan]  * implemented issue #170: update check needs to be deactivated for linux packages
 
